gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23882.d
version https://git-lfs.github.com/spec/v1
oid sha256:ae4c5a281c36bf5f9414c0784335c41c238502023bd0efbf6fe1c7a69ee3f39f
size 430
